<resources>
    <string name="app_name">Agenda</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="toca_el_bot_n_para_comenzar">Haz tap el botón Aceptar para comenzar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cuenta_atr_s">Cuenta Atrás</string>
    <string name="aniversario">Aniversario</string>
    <string name="cita">Cita</string>
    <string name="selecciona_un_tipo_de_evento">Selecciona un tipo de evento</string>
    <string name="ingresa_el_nombre_del_evento">Ingresa el nombre del evento</string>
    <string name="ingresa_una_fecha_y_hora_de_inicio">Ingresa una fecha y hora de inicio</string>
    <string name="resumen_agenda">Resumen Agenda</string>
    <string name="ver_eventos">Ver Eventos</string>
    <string name="agendas_guardadas">Agendas Guardadas</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="regresar">Regresar</string>
    <string name="borrar_eventos">Borrar Eventos</string>
</resources>