<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Form">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <EditText
            android:id="@+id/nombre_evento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ingresa_el_nombre_del_evento"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecciona_un_tipo_de_evento"
            android:textAlignment="viewStart"
            android:textColor="@color/secondaryOn"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_evento"
            app:layout_constraintVertical_bias="0.05" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/cita"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.02">

            <RadioButton
                android:id="@+id/cita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cita"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/anirversario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aniversario"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/cuenta_atras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_atr_s"
                android:textColor="@color/secondary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresa_una_fecha_y_hora_de_inicio"
            android:textAlignment="viewStart"
            android:textColor="@color/secondaryOn"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.05" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.02">

            <EditText
                android:id="@+id/fecha_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="dd/mm/aaaa"
                android:inputType="date"
                android:maxLines="1"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/hora_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="hh:mm:ss"
                android:inputType="time"
                android:maxLines="1"
                android:textColorHint="#757575" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ingresa una fecha y hora final"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.05" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.02">

            <EditText
                android:id="@+id/fecha_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="dd/mm/aaaa"
                android:inputType="date"
                android:maxLines="1"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/hora_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="hh:mm:ss"
                android:inputType="time"
                android:maxLines="1"
                android:textColorHint="#757575" />
        </LinearLayout>

        <Switch
            android:id="@+id/todo_el_dia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Todo el día"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.011" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripción del Evento"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_el_dia"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Ingrese una descripción del evento"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.02" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion">

            <Button
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:text="Cancelar"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="30dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primary"
                android:text="Aceptar"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="30dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>